[metadata]
name = mlcm
version = 0.0.1
author = Mohammadreza Heydarian
author_email = mrh110@gmail.com
description = Multi-Label Confusion Matrix
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mrh110/mlcm
project_urls =
    Lab url = https://biomedic.ai
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    numpy

[options.packages.find]
where = src
